--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
 	"version": "VERSION",
 	"description": "Scratch Addons’ addons data",
 	"homepage": "https://github.com/scratchaddons-community",
+	"main": "addons.json",
+	"scripts": {},
+	"prettier": "@redguy12/prettier-config",
+	"devDependencies": {
+		"@redguy12/prettier-config": "3.1.1",
+		"prettier": "3.3.3"
+	},
 	"repository": {
 		"url": "git+https://github.com/scratchaddons-community/addons-data-script.git"
 	},
@@ -10,7 +17,6 @@
 	"maintainers": [
 		"RedGuy12"
 	],
-	"main": "addons.json",
 	"types": "types.d.ts",
 	"files": [
 		"package.json",
@@ -18,6 +24,5 @@
 		"manifest.json",
 		"LICENSE",
 		"types.d.ts"
-	],
-	"scripts": {}
+	]
 }
