--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "Scratch Addons’ addons data",
 	"homepage": "https://github.com/scratchaddons-community",
 	"main": "addons.json",
-	"scripts": {},
+	"scripts": {		
+		"format": "prettier --write \"**\" --ignore-unknown --cache"
+	},
 	"prettier": "@redguy12/prettier-config",
 	"devDependencies": {
 		"@redguy12/prettier-config": "3.1.1",
